--- a/app/src/main/res/layout-xhdpi/activity_signin.xml
+++ b/app/src/main/res/layout-xhdpi/activity_signin.xml
@@ -54,6 +54,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_find_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineHeight="17dp"
@@ -72,6 +73,7 @@
                 android:textSize="14dp" />
 
             <TextView
+                android:id="@+id/tv_find_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineHeight="17dp"
@@ -88,7 +90,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/sign_in"
+                android:id="@+id/btn_sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
